[CRD iOS] Fix the size CHECK in GlRenderLayer

Looks like the host might send cursor shape with empty size to the
client, which will fail the check for width > 0 && height > 0.
Technically speaking glTexImage2D should allow zero size texture so
lets loosen the check to width >= 0 && height >= 0 and simply return
in UpdateTexture when either width == 0 or height == 0.

Bug: 766335
Change-Id: I68e9d9e22bb5995f5b0c1f5079db774c72407ef6
Reviewed-on: https://chromium-review.googlesource.com/674029
Reviewed-by: Scott Nichols <nicholss@chromium.org>
Commit-Queue: Yuwei Huang <yuweih@chromium.org>
Cr-Commit-Position: refs/heads/master@{#503203}
Former-commit-id: ae0bb1adcf2aad0b4b2b1a466e4d5125af58b1b0