remoting/client/display/gl_render_layer.cc
@@ -56,7 +56,7 @@ void GlRenderLayer::SetTexture(const uint8_t* texture,
                                int height,
                                int stride) {
   DCHECK(thread_checker_.CalledOnValidThread());
-  CHECK(width > 0 && height > 0);
+  DCHECK(width >= 0 && height >= 0);
   texture_set_ = true;
   glActiveTexture(GL_TEXTURE0 + texture_id_);
   glBindTexture(GL_TEXTURE_2D, texture_handle_);
@@ -88,7 +88,11 @@ void GlRenderLayer::UpdateTexture(const uint8_t* subtexture,
                                   int stride) {
   DCHECK(thread_checker_.CalledOnValidThread());
   DCHECK(texture_set_);
-  DCHECK(width > 0 && height > 0);
+  DCHECK(width >= 0 && height >= 0);
+  if (width == 0 || height == 0) {
+    // There is nothing to update.
+    return;
+  }
   glActiveTexture(GL_TEXTURE0 + texture_id_);
   glBindTexture(GL_TEXTURE_2D, texture_handle_);
 
